feat: Enhance NextPOS application with core functionality and configuration
- Updated POM file to include project metadata, dependencies, and build configurations.
- Added runtime data directories for pictures and session management with .gitkeep files.
- Improved README.md with detailed setup instructions, project structure, and runtime data information.
- Introduced AppConfig and AppPaths classes for configuration management and directory handling.
- Implemented DAO classes for AuditLog, Category, Customer, Employee, and Invoice with CRUD operations and logging.
- Configured UTF-8 encoding for source files in IDE settings.
- Added JVM configuration for native access support.